# radiant-filament

./: .gitignore  .pre-commit-config.yaml  .rumdl.toml  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  WORKFLOW_SETUP.md  cliff.toml  create_workflow.py  mise.toml  pyproject.toml  setup-workflow.sh  tombi.toml
.claude/: hookify.require-uv.local.md
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  debugger.agent.md  reviewer.agent.md
.github/instructions/: code-review.instructions.md  documentation.instructions.md  performance.instructions.md  python.instructions.md  security.instructions.md  testing.instructions.md
.github/prompts/: code-review.prompt.md  debug-issue.prompt.md  generate-docs.prompt.md  refactor-code.prompt.md  setup-component.prompt.md  write-tests.prompt.md
.github/workflows/: copilot-setup-steps.yml  fast-pr-gate.yml  use-python-mise-fast-pr-gate.yml
docs/: cached-wiggling-shamir.md  deep-research.md.txt  workflow-fast-pr-gate.md
docs/prompts/: covid-prompt.md
docs/reports/: gemini-covid-report.md  openai-covid-report.md
prompts/: homelab-prompt-1.md
reports/: report.md
src/radiant_filament/: agent.py  main.py
tests/: conftest.py  test_agent.py  test_main.py
