[project]
name = "radiant-filament"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "google-genai>=1.55.0",
  "rich>=14.2.0",
]

[project.scripts]
radiant-filament = "radiant_filament.main:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
